# Survival-Mode-Improved-SKSE

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EXCEPTIONS  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: clang-format.yml  prettier.yml  testbuild.yml
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
contrib/Config/: SurvivalModeImproved.ini
contrib/PluginRelease1130/skse/plugins/: SurvivalModeImproved.esp  SurvivalModeImproved.ini
include/: AvPenaltyManager.h  Events.h  PCH.h  SMI_API.h  SMI_ModAPI.h  Serialization.h  SurvivalMode.h
include/Needs/: NeedBase.h  NeedCold.h  NeedExhaustion.h  NeedHunger.h
include/Settings/: FormLoader.h  Settings.h
src/: Events.h  Hooks.h  PCH.h  PlayerStatus.h  SMI_ModAPI.cpp  Serialization.h  SurvivalMode.cpp  SurvivalMode.h  Utility.h  main.cpp
src/Needs/: NeedBase.h  NeedCold.h  NeedExhaustion.h  NeedHunger.h
src/PapyrusAPI/: PapyrusAPI.h
src/Settings/: FormLoader.h  Settings.h
